--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -4,7 +4,12 @@ html(lang='ru')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content="IE=edge")
     meta(name='viewport' content='width=device-width')
+    link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous")
     link(rel="stylesheet" href="css/main.min.css")
-    title Business
+    title JWeb
   body
-    h1 This is a cool project
+    include sections/header
+    h1 Это мой крутой landing
+    //p абзац
+    include sections/footer
+
