--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -9,7 +9,8 @@ html(lang='ru')
     title JWeb
   body
     include sections/header
-    h1 Это мой крутой landing
+    //h1 Это мой крутой landing
     //p абзац
     include sections/footer
+    include sections/hero
 
