--- a/source/template/sections/header.pug
+++ b/source/template/sections/header.pug
@@ -6,4 +6,4 @@ header.header
         .header__bottom
             .logo: img.logo__pictures(src="images/JW.png" alt="pic")
             include nav
-            a.button.header__button.button--green(href="#") Уточнить детали?
+            a.button.header__button.button--green(href="#") Уточнить детали
