--- a/source/template/sections/hero.pug
+++ b/source/template/sections/hero.pug
@@ -1,4 +1,4 @@
 section.hero
     .hero__about Разработаем
     h1.hero__title Индивидуальные IT-решения для Вашего бизнеса
-    a.button.button--green.button--text-uppercase(href="#") Уточнить детали?
+    a.button.button--green.button--text-uppercase(href="#") Уточнить детали
