About done. Approach started

--- a/source/styles/sections/nav.scss
+++ b/source/styles/sections/nav.scss
@@ -9,6 +9,7 @@
       vertical-align: top;
       padding: 10px;
       font-family: $ff-main-bold;
+      font-size: 1.4rem;
       text-decoration: none;
       text-transform: capitalize;
       color: #454545;
