--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -13,4 +13,6 @@ html(lang='ru')
     //p абзац
     include sections/footer
     include sections/hero
+    include sections/about
+    include sections/approach
 
