--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -9,17 +9,6 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$book-name: 'book';
-$book-x: 0px;
-$book-y: 81px;
-$book-offset-x: 0px;
-$book-offset-y: -81px;
-$book-width: 66px;
-$book-height: 79px;
-$book-total-width: 167px;
-$book-total-height: 160px;
-$book-image: '../images/sprite.png';
-$book: (0px, 81px, 0px, -81px, 66px, 79px, 167px, 160px, '../images/sprite.png', 'book', );
 $like-name: 'like';
 $like-x: 84px;
 $like-y: 0px;
@@ -28,9 +17,9 @@ $like-offset-y: 0px;
 $like-width: 83px;
 $like-height: 79px;
 $like-total-width: 167px;
-$like-total-height: 160px;
+$like-total-height: 145px;
 $like-image: '../images/sprite.png';
-$like: (84px, 0px, -84px, 0px, 83px, 79px, 167px, 160px, '../images/sprite.png', 'like', );
+$like: (84px, 0px, -84px, 0px, 83px, 79px, 167px, 145px, '../images/sprite.png', 'like', );
 $message-name: 'message';
 $message-x: 0px;
 $message-y: 0px;
@@ -39,25 +28,36 @@ $message-offset-y: 0px;
 $message-width: 84px;
 $message-height: 81px;
 $message-total-width: 167px;
-$message-total-height: 160px;
+$message-total-height: 145px;
 $message-image: '../images/sprite.png';
-$message: (0px, 0px, 0px, 0px, 84px, 81px, 167px, 160px, '../images/sprite.png', 'message', );
+$message: (0px, 0px, 0px, 0px, 84px, 81px, 167px, 145px, '../images/sprite.png', 'message', );
+$shop-name: 'shop';
+$shop-x: 0px;
+$shop-y: 81px;
+$shop-offset-x: 0px;
+$shop-offset-y: -81px;
+$shop-width: 64px;
+$shop-height: 64px;
+$shop-total-width: 167px;
+$shop-total-height: 145px;
+$shop-image: '../images/sprite.png';
+$shop: (0px, 81px, 0px, -81px, 64px, 64px, 167px, 145px, '../images/sprite.png', 'shop', );
 $work-item-name: 'work-item';
-$work-item-x: 66px;
+$work-item-x: 64px;
 $work-item-y: 81px;
-$work-item-offset-x: -66px;
+$work-item-offset-x: -64px;
 $work-item-offset-y: -81px;
 $work-item-width: 36px;
 $work-item-height: 37px;
 $work-item-total-width: 167px;
-$work-item-total-height: 160px;
+$work-item-total-height: 145px;
 $work-item-image: '../images/sprite.png';
-$work-item: (66px, 81px, -66px, -81px, 36px, 37px, 167px, 160px, '../images/sprite.png', 'work-item', );
+$work-item: (64px, 81px, -64px, -81px, 36px, 37px, 167px, 145px, '../images/sprite.png', 'work-item', );
 $spritesheet-width: 167px;
-$spritesheet-height: 160px;
+$spritesheet-height: 145px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($book, $like, $message, $work-item, );
-$spritesheet: (167px, 160px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($like, $message, $shop, $work-item, );
+$spritesheet: (167px, 145px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
