--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -6,8 +6,13 @@
 @import "global/common";
 @import "global/base";
 @import "global/sprite";
+@import "global/icons";
 @import "global/button";
+
 
 @import "sections/header";
 @import "sections/nav";
 @import "sections/hero";
+@import "sections/about";
+@import "sections/title";
+@import "sections/approach";
