--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -9,7 +9,10 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
+    //position: sticky;
+    //top: 0;
     padding: 20px 0 30px;
+
   }
 }
 
