--- a/source/styles/sections/hero.scss
+++ b/source/styles/sections/hero.scss
@@ -22,7 +22,7 @@
     font-size: 1.3rem;
     font-weight: bold;
     letter-spacing: 1px;
-    width: 18%;
+    width: 280px;
     color: #000;
     background: #f99c22;
 
