Approach done. Works started

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -8,6 +8,7 @@
 @import "global/sprite";
 @import "global/icons";
 @import "global/button";
+@import "global/mixins";
 
 
 @import "sections/header";
@@ -16,3 +17,4 @@
 @import "sections/about";
 @import "sections/title";
 @import "sections/approach";
+@import "sections/work";
