--- a/source/template/sections/approach.pug
+++ b/source/template/sections/approach.pug
@@ -8,7 +8,7 @@ section.approach
             li.approach__item
                 .approach__image
                     img.approach__picture(src="../images/step-1.jpg" alt="pic")
-                    .approach__step step
+                    .approach__step шаг
                 .approach__text
                     .approach__title Шаг 1 : Составление ТЗ
                     p.approach__description.
@@ -16,7 +16,7 @@ section.approach
             li.approach__item
                 .approach__image
                     img.approach__picture(src="../images/step-2.jpg" alt="pic")
-                    .approach__step step
+                    .approach__step шаг
                 .approach__text
                     .approach__title Шаг 2 : Внешний вид
                     p.approach__description.
@@ -24,7 +24,7 @@ section.approach
             li.approach__item
                 .approach__image
                     img.approach__picture(src="../images/step-3.jpg" alt="pic")
-                    .approach__step step
+                    .approach__step шаг
                 .approach__text
                     .approach__title Шаг 3 : Создание
                     p.approach__description.
@@ -32,7 +32,7 @@ section.approach
             li.approach__item
                 .approach__image
                     img.approach__picture(src="../images/step-4.jpg" alt="pic")
-                    .approach__step step
+                    .approach__step шаг
                 .approach__text
                     .approach__title Шаг 4 : Размещение в сети
                     p.approach__description.
