Works to be finished. Form, footer started

--- a/source/styles/sections/work.scss
+++ b/source/styles/sections/work.scss
@@ -20,7 +20,7 @@
     width: 256px;
     height: 255px;
     font-weight: bold;
-    color: #ffffff;
+    color: #000;
     background: #f99c22;
 
     &--name {
