--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -11,9 +11,10 @@ html(lang='ru')
     include sections/header
     //h1 Это мой крутой landing
     //p абзац
-    include sections/footer
     include sections/hero
     include sections/about
     include sections/approach
     include sections/work
+    include sections/form
+    include sections/footer
 
