--- a/source/template/sections/header.pug
+++ b/source/template/sections/header.pug
@@ -3,7 +3,7 @@ header.header
         .container
             include contact
 
-    .container
+    .container#stick
         .header__bottom
             .logo: img.logo__pictures(src="images/JW.png" alt="pic")
             include nav
