--- a/source/template/sections/work.pug
+++ b/source/template/sections/work.pug
@@ -9,21 +9,21 @@ section.work
                 .work__name Marina's photoblog
                 .work__description Авторский фотоблог с возможностью добавления комментариев и их модерированием
 
-            li.work__item: img.work__picture(src="images/work-1.jpg" alt="picture")
+            li.work__item: a(href="http://sanki.space/" target="_blank"): img.work__picture(src="images/work-1.jpg" alt="picture")
 
             li.work__item.work__item--name
                 .work__name Портфолио
                 .work__description Сайт-портфолио художника и декоратора с возможностью управления контентом
 
-            li.work__item: img.work__picture(src="images/work-2.jpg" alt="picture")
+            li.work__item: a(href="http://sanki.space/" target="_blank"): img.work__picture(src="images/work-2.jpg" alt="picture")
 
-            li.work__item: img.work__picture(src="images/work-3.jpg" alt="picture")
+            li.work__item: a(href="http://sanki.space/" target="_blank"): img.work__picture(src="images/work-3.jpg" alt="picture")
 
             li.work__item.work__item--name
                 .work__name Интернет-магазин
                 .work__description
 
-            li.work__item: img.work__picture(src="images/work-4.jpg" alt="picture")
+            li.work__item: a(href="http://sanki.space/" target="_blank"): img.work__picture(src="images/work-4.jpg" alt="picture")
 
             li.work__item.work__item--name
                 .work__name Landing page
