--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -18,3 +18,5 @@
 @import "sections/title";
 @import "sections/approach";
 @import "sections/work";
+@import "sections/form";
+@import "sections/footer";
