--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,3 +1,8 @@
+#stick  {
+  position: sticky !important;
+  top: 0 !important;
+}
+
 .header {
   &__top {
     background: #e6e6e6;
@@ -9,10 +14,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    //position: sticky;
-    //top: 0;
     padding: 20px 0 30px;
-
   }
 }
 
