--- a/source/template/sections/approach.pug
+++ b/source/template/sections/approach.pug
@@ -36,4 +36,4 @@ section.approach
                 .approach__text
                     .approach__title Шаг 4 : Размещение в сети
                     p.approach__description.
-                        Создание продающего текста. Наполнение сайта. Размещение в Internet.
+                        Написание продающего текста. Наполнение сайта. Размещение в Internet.
