--- a/source/template/sections/footer.pug
+++ b/source/template/sections/footer.pug
@@ -1,5 +1,5 @@
 - var linkItems = ['facebook-official', 'twitter', 'google-plus', 'linkedin']
-- var linkUrls = ['facebook.com', 'twitter.com', 'google.com', 'linkedin.com']
+- var linkUrls = ['https://www.facebook.com/profile.php?id=100011626740491', 'https://twitter.com/J0Z80?lang=ru', 'https://plus.google.com/116879297306664019667', 'www.linkedin.com/in/евгений-захарченко-66b170139/']
 footer.footer
     .footer__top
         .container
@@ -15,4 +15,4 @@ footer.footer
                 button(type="submit").button Участвовать в акциях
 
     .footer__bottom
-        .footer__copy JWeb.club &copy; 2017
+        .footer__copy JWeb.club 2017
