--- a/source/template/sections/form.pug
+++ b/source/template/sections/form.pug
@@ -17,4 +17,4 @@ section.form-section
                     input.form__input(type="text" placeholder="Контактный номер")
                     input.form__input(type="text" placeholder="Имя")
 
-                button(type="submit").button.button--text-uppercase.button--red Подать заявку
+                button(type="submit").button.button--text-uppercase Подать заявку
