--- a/source/styles/sections/approach.scss
+++ b/source/styles/sections/approach.scss
@@ -2,6 +2,10 @@
   padding: 50px 0 94px;
   background-color: #f3f3f3;
 
+  @media (max-width: 760px) {
+    padding-bottom: 5vh;
+  }
+
   &__list {
     margin: 0;
     padding: 0;
@@ -22,11 +26,30 @@
 
       .approach__text {
         padding: 70px 90px;
+
+        @media (max-width: 832px) {
+          margin-top: -2%;
+          padding: 50px 14%;
+        }
+
+        @media (max-width: 760px) {
+          margin: 0 1%;
+          padding: 50px 10%;
+        }
+
+        @media (max-width: 600px) {
+          width: auto;
+          margin: 3%;
+        }
       }
 
       .approach__step {
         right: auto;
         left: -52px;
+
+        @media (max-width: 760px) {
+          display: none
+        }
       }
     }
   }
@@ -43,6 +66,10 @@
     display: block;
     width: 100%;
     height: 100%;
+
+    @media (max-width: 600px) {
+      display: none;
+    }
   }
 
   &__text {
@@ -51,6 +78,35 @@
     width: 64%;
     padding: 70px 70px 55px 90px;
     font-size: 0.92rem;
+
+    @media (max-width: 1000px) {
+      margin: 5px -2%;
+    }
+
+    @media (max-width: 874px) {
+      margin: 0px -3%;
+    }
+
+    @media (max-width: 832px) {
+      margin: 0px -4%;
+      padding-left: 14%;
+    }
+
+    @media (max-width: 792px) {
+      margin: -40px -5%;
+      padding-left: 15%;
+    }
+
+    @media (max-width: 760px) {
+      margin: -30px -12%;
+      padding-left: 17%;
+      font-size: 0.8rem;
+    }
+
+    @media (max-width: 600px) {
+      width: auto;
+      margin: 3%;
+    }
   }
 
   &__step {
@@ -67,6 +123,15 @@
     background-color: #f99c22;;
     color: #fff;
 
+    @media (max-width: 874px) {
+      width: 93px;
+      height: 93px;
+    }
+
+    @media (max-width: 760px) {
+      display: none;
+    }
+
     &:before {
       content: counter(count);
       counter-increment: count;
@@ -75,6 +140,10 @@
       font-size: 3rem;
       line-height: 1;
       color: #fff;
+
+      @media (max-width: 760px) {
+        font-size: 2rem;
+      }
     }
   }
 
@@ -82,11 +151,40 @@
     margin-bottom: 6px;
     font-size: 1.2rem;
     font-family: $ff-main-bold;
+
+    @media (max-width: 600px) {
+      text-align: center;
+    }
+
   }
 
   &__description {
     margin: 0;
     line-height: 1.5;
     font-size: 1.1rem;
+
+    @media (max-width: 760px) {
+      line-height: 1.2;
+      font-size: 1rem;
+    }
+  }
+
+.title--with--line
+  h2.title__header {
+  @media (min-width: 760px) {
+    margin: 0;
+    font-size: 2rem;
+  }
+
+  @media (max-width: 600px) {
+    display: none;
+  }
+}
+
+  .title__text {
+    @media (max-width: 760px) {
+      font-size: 1.5rem;
+      margin: 5px 0;
+    }
   }
 }
