--- a/source/styles/sections/form.scss
+++ b/source/styles/sections/form.scss
@@ -1,7 +1,7 @@
 .form-section {
   padding: 100px 0 110px 0;
-  color: #fff;
-  background-color: rgba(248, 188, 110, 0.6);
+  color: #f99c22;
+  background-color: white;
 
   .title {
     margin-bottom: 12px;
@@ -21,8 +21,13 @@
     margin: auto auto 20px;
     width: 65px;
     height: 65px;
-    border: 2px solid #fff;
+    border: 2px solid #f99c22;
     border-radius: 50%;
+
+    &:hover {
+      transform: scale(1.15,1.15);
+      transition: transform .3s ease-in-out .2s;
+    }
   }
 
   .arrow-down {
@@ -40,7 +45,7 @@
   margin: auto;
   padding: 50px 50px 66px 50px;
   border-radius: 3px;
-  color: #828282;
+  color: black;
   text-align: center;
   background-color: #fff;
 
@@ -68,11 +73,11 @@
     text-align: center;
     font-size: 2rem;
     color: #ffffff;
-    background: #de2b24;
+    background: #f99c22;
     transition: 0.3s;
 
     &:hover {
-      background: lighten(#de2b24, 10%);
+      background: lighten(#f99c22, 20%);
     }
   }
 
@@ -103,5 +108,6 @@
   .button {
     padding: 15px 30px;
     border: none;
+    background: #f99c22;
   }
 }
