--- a/source/styles/sections/nav.scss
+++ b/source/styles/sections/nav.scss
@@ -1,8 +1,12 @@
 .nav {
   display: inline-block;
-  vert-align: top;
+  vertical-align: top;
   padding-top: 5px;
   margin-right: 15px;
+
+  @media (max-width: 1000px) {
+    margin-bottom: 15px;
+  }
 
     &__link {
       display: inline-block;
