--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -5,6 +5,7 @@ html(lang='ru')
     meta(http-equiv='X-UA-Compatible', content="IE=edge")
     meta(name='viewport' content='width=device-width')
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="css/main.min.css")
     title JWeb
   body
