--- a/source/template/sections/nav.pug
+++ b/source/template/sections/nav.pug
@@ -1,5 +1,5 @@
 nav.nav
-    - var items = ["home", "о нас", "технологии", "наши работы"]
+    - var items = ["Домой", "о нас", "технологии", "наши работы"]
     each item in items
         if item  === "Н"
             a.nav__link--active(href="#")= item
