--- a/source/template/sections/work.pug
+++ b/source/template/sections/work.pug
@@ -2,7 +2,7 @@ section.work
     .container
         .title.title--with-bottom-line
             h2.title.title__header Наши работы
-            .title__text Тут можно увидеть примеры наших работ
+            .title__text Примеры наших работ, детали и описание
 
         ul.work__list
             li.work__item.work__item--name
