--- a/source/styles/sections/about.scss
+++ b/source/styles/sections/about.scss
@@ -2,6 +2,10 @@
   padding: 3vh 0;
   text-align: center;
 
+  @media (max-width: 960px) {
+    padding: 1vh 0;
+  }
+
   &__item {
     width: 33%;
     list-style: none;
