--- a/source/styles/sections/approach.scss
+++ b/source/styles/sections/approach.scss
@@ -2,8 +2,12 @@
   padding: 50px 0 94px;
   background-color: #f3f3f3;
 
+  @media (max-width: 1000px) {
+    padding: 3vh 0;
+  }
+
   @media (max-width: 760px) {
-    padding-bottom: 5vh;
+    padding-bottom: 1vh;
   }
 
   &__list {
@@ -38,8 +42,9 @@
         }
 
         @media (max-width: 600px) {
-          width: auto;
-          margin: 3%;
+          padding: 15px 10%;
+          width: 100%;
+          margin: 1%;
         }
       }
 
@@ -104,8 +109,9 @@
     }
 
     @media (max-width: 600px) {
-      width: auto;
-      margin: 3%;
+      padding: 15px 10%;
+      width: 100%;
+      margin: 1%;
     }
   }
 
@@ -152,6 +158,10 @@
     font-size: 1.2rem;
     font-family: $ff-main-bold;
 
+    @media (max-width: 1000px) {
+      margin-bottom: 2vh;
+    }
+
     @media (max-width: 600px) {
       text-align: center;
     }
@@ -169,22 +179,33 @@
     }
   }
 
-.title--with--line
-  h2.title__header {
-  @media (min-width: 760px) {
-    margin: 0;
-    font-size: 2rem;
+.title--with--line {
+  @media (max-width: 874px) {
+    margin: 2% 0;
   }
 
-  @media (max-width: 600px) {
-    display: none;
+  h2.title__header {
+    @media (min-width: 760px) {
+      margin: 1vh 0 2vh;
+      font-size: 2rem;
+    }
+
+    @media (max-width: 600px) {
+      display: none;
+    }
   }
-}
 
   .title__text {
-    @media (max-width: 760px) {
+    @media (max-width: 1000px) {
       font-size: 1.5rem;
+      margin: 5px 0 -4vh;
+    }
+
+    @media (max-width: 760px) {
+      font-size: 1.2rem;
       margin: 5px 0;
     }
   }
+}
+
 }
