--- a/source/styles/sections/work.scss
+++ b/source/styles/sections/work.scss
@@ -3,6 +3,10 @@
   background-color: rgba(38, 134, 91, 0.4);
   color: #fff;
 
+  @media (max-width: 1000px) {
+    padding: 2vh 0;
+  }
+
   &__list {
     display: flex;
     flex-wrap: wrap;
