--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -10,12 +10,12 @@ html(lang='ru')
     title JWeb
   body
     include sections/header
-    //h1 Это мой крутой landing
-    //p абзац
     include sections/hero
     include sections/about
     include sections/approach
     include sections/work
     include sections/form
     include sections/footer
+
+    script(src="js/main.min.js")
 
