--- a/source/template/sections/work.pug
+++ b/source/template/sections/work.pug
@@ -15,7 +15,7 @@ section.work
                 .work__name Портфолио
                 .work__description Сайт-портфолио художника и декоратора с возможностью управления контентом
 
-            li.work__item: a(href="#" target="_blank"): img.work__picture(src="images/work-2.jpg" alt="picture")
+            li.work__item: a(href="http://tenderanna.win" target="_blank"): img.work__picture(src="images/work-2.jpg" alt="picture")
 
             li.work__item: a(href="#" target="_blank"): img.work__picture(src="images/work-3.jpg" alt="picture")
 
