--- a/source/template/sections/nav.pug
+++ b/source/template/sections/nav.pug
@@ -2,6 +2,6 @@ nav.nav
     - var items = ["Домой", "о нас", "технологии", "наши работы"]
     each item in items
         if item  === "Н"
-            a.nav__link--active(href="#")= item
+            a.nav__link--active(href="#H")= item
         else
             a.nav__link(href="#")= item
