--- a/source/styles/sections/approach.scss
+++ b/source/styles/sections/approach.scss
@@ -181,7 +181,7 @@
 
 .title--with--line {
   @media (max-width: 874px) {
-    margin: 2% 0;
+    margin: 0 0 3%;
   }
 
   @media (max-width: 796px) {
@@ -189,25 +189,25 @@
   }
 
   h2.title__header {
-    @media (min-width: 760px) {
-      margin: 1vh 0 2vh;
+
+    @media (max-width: 874px) {
       font-size: 2rem;
     }
 
-    @media (max-width: 600px) {
-      display: none;
+    @media (max-width: 796px) {
+      visibility: hidden;
     }
   }
 
   .title__text {
     @media (max-width: 1000px) {
       font-size: 1.5rem;
-      margin: 5px 0 -4vh;
+      margin: 1vh 0 -4vh;
     }
 
-    @media (max-width: 760px) {
+    @media (max-width: 796px) {
       font-size: 1.2rem;
-      margin: 5px 0;
+      margin: -7vh 0 7vh;
     }
   }
 }
