--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,7 +1,7 @@
-#stick  {
-  position: sticky !important;
-  top: 0 !important;
-}
+//#stick  {
+//  position: sticky !important;
+//  top: 0 !important;
+//}
 
 .header {
   &__top {
@@ -72,6 +72,9 @@
 }
 
 .logo {
+
+  margin-left: -5%;
+
   @media (max-width: 1080px) {
     margin-left: 15px;
   }
