--- a/source/template/sections/nav.pug
+++ b/source/template/sections/nav.pug
@@ -1,7 +1,8 @@
 nav.nav
-    - var items = ["Домой", "о нас", "технологии", "наши работы"]
-    each item in items
+    - var items = ["о нас", "технологии","уточнить детали", "наши работы", "заказать"]
+    - var dataItems = ['hero', 'about', 'approach', 'work', 'form-section']
+    each item, key in items
         if item  === "Н"
-            a.nav__link--active(href="#H")= item
+            a.nav__link--active(href="#H" data-link=dataItems[key])= item
         else
-            a.nav__link(href="#")= item
+            a.nav__link(href="#" data-link=dataItems[key])= item
