--- a/source/template/sections/footer.pug
+++ b/source/template/sections/footer.pug
@@ -16,3 +16,6 @@ footer.footer
 
     .footer__bottom
         .footer__copy JWeb.club 2017
+
+    button#top
+        img(src="images/up.png" alt="Up")
