--- a/source/template/sections/nav.pug
+++ b/source/template/sections/nav.pug
@@ -1,5 +1,5 @@
 nav.nav
-    - var items = ["о нас", "технологии","уточнить детали", "наши работы", "заказать"]
+    - var items = ["о нас", "услуги","уточнить детали", "наши работы", "заказать"]
     - var dataItems = ['hero', 'about', 'approach', 'work', 'form-section']
     each item, key in items
         if item  === "Н"
